@@ -3,6 +3,7 @@ Version 2.02.74 -
   Simplify MD/swap signature detection in pvcreate and allow aborting.
   Remove assumption that --yes must be used only in --force mode.
   Fix file descriptor leak in swap signature detection error path.
+  Detect and allow abort in pvcreate if LUKS signature is detected.
 
 Version 2.02.73 - 18th August 2010
 ==================================
